@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-13T08:07:44Z",
+  "timestamp" : "2022-04-13T16:06:31Z",
   "count" : 0,
   "count_minmax" : [ 0, 0 ],
   "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 2,
+  "count_prev_day_dec" : 212,
   "uniques" : 0,
   "uniques_minmax" : [ 0, 0 ],
   "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_prev_day_dec" : 8
 }
