@@ -1,11 +1,11 @@
 {
-  "count": 237,
-  "uniques": 16,
+  "count": 27,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-03-30T00:00:00Z",
-      "count": 211,
-      "uniques": 9
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-03-31T00:00:00Z",
