@@ -1,3 +1,9 @@
+2022-04-13T16:06:31Z:
+* notice: last 14d: all unq: 27 9
+* notice: prev accum: outdated-all outdated-unq / all unq: 1214 337 / 1451 361
+* notice: next accum: outdated-all outdated-unq / all unq: 1214 337 / 1241 353
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -8 -210 // +1 +1 / -8 -212
+
 2022-04-13T08:07:44Z:
 * notice: last 14d: all unq: 237 16
 * notice: prev accum: outdated-all outdated-unq / all unq: 1214 337 / 1453 361
